--- a/Facebook_MKT.WPF/Facebook_MKT.WPF.csproj
+++ b/Facebook_MKT.WPF/Facebook_MKT.WPF.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="fb_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
@@ -17,6 +22,25 @@
   <ItemGroup>
     <ProjectReference Include="..\Facebook_MKT.Data\Facebook_MKT.Data.csproj" />
     <ProjectReference Include="..\Faceebook_MKT.Domain\Faceebook_MKT.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="fb_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
