--- a/Faceebook_MKT.Domain/Faceebook_MKT.Domain.csproj
+++ b/Faceebook_MKT.Domain/Faceebook_MKT.Domain.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ValidateRule\" />
+    <Folder Include="BrowserController\Handlers\" />
+    <Folder Include="Helpers\ConvertModelToEntity\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Otp.NET" Version="1.4.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.23.0" />
   </ItemGroup>
