--- a/Faceebook_MKT.Domain/Faceebook_MKT.Domain.csproj
+++ b/Faceebook_MKT.Domain/Faceebook_MKT.Domain.csproj
@@ -9,10 +9,13 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Leaf.xNet" Version="5.2.10" />
+    <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
     <PackageReference Include="Microsoft.Playwright" Version="1.47.0" />
     <PackageReference Include="Otp.NET" Version="1.4.0" />
     <PackageReference Include="RestSharp" Version="112.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.23.0" />
+    <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
+    <PackageReference Include="Xabe.FFmpeg.Downloader" Version="5.2.6" />
   </ItemGroup>
 
   <ItemGroup>
